# inspired-mile-web

./: .gitignore  PROJECT_BRIEF.md  ROADMAP.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs
backend/: .env.development  .env.production.template  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_wallet.sql  003_nft_state.sql  004_multiplayer.sql  005_marketplace.sql  006_tournaments.sql  007_oauth_wallet_auth.sql  008_tournament_creator.sql  009_performance_indexes.sql  010_credits.sql  011_seasons.sql  012_houses.sql  013_classrooms.sql  014_referrals.sql  015_content_reports.sql  016_age_tier.sql
backend/src/: config.rs  db.rs  main.rs  rate_limit.rs
backend/src/auth/: google.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  wallet.rs
backend/src/classroom/: handlers.rs  mod.rs
backend/src/credits/: handlers.rs
backend/src/inventory/: handlers.rs
backend/src/marketplace/: handlers.rs  mod.rs
backend/src/migration/: handlers.rs
backend/src/multiplayer/: content_filter.rs  game_room.rs  handlers.rs  judge.rs  matchmaking.rs  mod.rs
backend/src/nft/: handlers.rs
backend/src/referral/: handlers.rs
backend/src/seasons/: handlers.rs
backend/src/stats/: handlers.rs  mod.rs
backend/src/tournaments/: bracket.rs  handlers.rs  mod.rs  scheduler.rs
backend/src/variants/: handlers.rs
public/: manifest.json  offline.html  robots.txt  sitemap.xml  sw.js
scripts/: create-merkle-tree.ts  generate-remaining-variants.ts  generate-variant-art.ts  generate-variant-catalog.ts
(+65 files in other folders)
